--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -8,8 +8,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-
-<GridPane alignment="center" hgap="10" vgap="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="sample.Controller">
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <columnConstraints>
       <ColumnConstraints />
    </columnConstraints>
@@ -17,9 +16,9 @@
       <RowConstraints />
    </rowConstraints>
    <children>
-      <Pane prefHeight="595.0" prefWidth="493.0">
+      <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="600.0">
          <children>
-            <Button layoutX="391.0" layoutY="540.0" mnemonicParsing="false" text="Neue Liste" />
+            <Button layoutX="477.0" layoutY="720.0" mnemonicParsing="false" text="Neue Liste" />
          </children>
       </Pane>
    </children>
